welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:4: error: '(' expected but identifier found.
  if a<=10{
     ^close10:16: error: '(' expected but identifier found.
  if b<=10{
     ^