welcome.lessons.welcome.bat.bool1.Close10.scala.code
def close10(a:Int, b:Int): Int = {
  var x=0
  var y=0
  if a<=10{
    while (!a==10){
      x=x+1
      a=a+1
    }
  }
  else {
    while (!a==10){
      x=x+1
      a=a-1
    }
  }
  if b<=10{
    while (!b==10){
      y=y+1
      b=b+1
    }
  }
  else {
    while (!b==10){
      y=y+1
      a=a-1
    }
  }
  if (x>=y)
  {
    return y}
  return x
}